need to add shadow

--- a/index.html
+++ b/index.html
@@ -11,12 +11,20 @@
       max-height : 900px;
       padding : 20px;
     }
+    .mainCard { 
+      text-align : center;
+      background-color : white;
+      padding : 10px;
+      box-shadow: 10px 15px 30px rgba(1, 1, 1, 1);
+      
+    }
+  
   </style>
 </head>
 <body>
   <div class = "yellowBox">
     <div class = "mainCard" >
-      <div></div>
+      <img src = "assets/images/illustration-article.svg">
     </div>
   </div>
 </body>
